添加品牌管理

--- a/cartisan-management-ui/src/styles/index.scss
+++ b/cartisan-management-ui/src/styles/index.scss
@@ -143,6 +143,11 @@ code {
   margin-top: 30px;
 }
 
+//表格栏样式
+.table-container {
+  margin-top: 20px;
+}
+
 .text-center {
   text-align: center
 }
