--- a/cartisan-management-ui/src/styles/index.scss
+++ b/cartisan-management-ui/src/styles/index.scss
@@ -182,7 +182,8 @@ code {
 }
 
 .filter-container {
-  padding-bottom: 10px;
+  //padding-bottom: 10px;
+  margin-bottom: 10px;
 
   .filter-item {
     display: inline-block;
